--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
   - node_modules
   - client/node_modules
 install:
-- npm install
+# - npm install (uncomment later for the server)
 - (cd client && npm install)
 script:
 - npm test --prefix ./client
