--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "unique-random": "^2.1.0",
-    "validator": "^11.1.0"
+    "validator": "^11.1.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
