--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,6 @@
     "axios": "^0.21.1",
     "formik": "^2.2.0",
     "react": "^16.13.1",
-    "react-burger-menu": "^3.0.6",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
@@ -23,6 +22,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "reset-css": "^5.0.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.0",
     "yup": "^0.29.3"
