--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
@@ -29,8 +30,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "unique-random": "^2.1.0",
-    "validator": "^11.1.0",
-    "cors": "^2.8.5"
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
